apps/hivewiki-web/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hivewiki-web-prod
  labels:
    environment: prod
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
