apps/hivewiki-web/overlays/prod/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivewiki-web
  labels:
    environment: prod
spec:
  selector:
    environment: prod
