apps/hivewiki-web/overlays/prod/patch-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hivewiki-web
  labels:
    environment: prod
spec:
  hostnames:
    - www.hive-wiki.com
